# brain

./: .gitignore  README.md  config.default.yaml  mobydick.txt  pyproject.toml
.claude/: settings.local.json
src/brain/: config.py  llm.py  models.py
src/brain/chat/: engine.py  retriever.py
src/brain/cli/: app.py  chat_cmd.py  doctor.py  graph_cmd.py  ingest_cmd.py
src/brain/graph/: bridge.py  client.py
src/brain/ingest/: chunker.py  normalizers.py  pipeline.py
src/brain/stores/: docstore.py  vectorstore.py
src/brain/ui/: app.py  tab_chat.py  tab_graph.py  tab_ingest.py  tab_jobs.py  tab_settings.py
tests/: conftest.py  test_chat_engine.py  test_chunker.py  test_config.py  test_docstore.py  test_graph_bridge.py  test_llm.py  test_normalizers.py  test_vectorstore.py
